--- a/samples/server-generator/scalatra/templates/api.mustache
+++ b/samples/server-generator/scalatra/templates/api.mustache
@@ -66,7 +66,7 @@ class {{className}} (implicit val swagger: Swagger) extends ScalatraServlet
     {{#bodyParameter}}
       val {{paramName}} = parsedBody.extract[{{dataType}}]
     {{/bodyParameter}}
-    println({{paramName}})
+    println("{{paramName}}: " + {{paramName}})
   {{/allParams}}
   }
 
