--- a/samples/server-generator/java-jaxrs/templates/web.mustache
+++ b/samples/server-generator/java-jaxrs/templates/web.mustache
@@ -41,13 +41,12 @@
     <servlet-name>jersey</servlet-name>
     <url-pattern>/*</url-pattern>
   </servlet-mapping>
-<!--  <filter>
+  <filter>
     <filter-name>ApiOriginFilter</filter-name>
-    <filter-class>com.wordnik.swagger.sample.util.ApiOriginFilter</filter-class>
+    <filter-class>{{apiPackage}}.ApiOriginFilter</filter-class>
   </filter>
   <filter-mapping>
     <filter-name>ApiOriginFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
--->
 </web-app>
