Corrected typo in statis HTML API docs

--- a/src/main/resources/swagger-static/operation.mustache
+++ b/src/main/resources/swagger-static/operation.mustache
@@ -17,7 +17,7 @@
 	</div>
 
   <div class="main_content">
-	  <h1>{{classname}}</h1>
+	  <h1>{{className}}</h1>
 	  {{#operations}}
 	  {{#operation}}
 	  <a name="{{nickname}}"></a>
