--- a/src/main/resources/asyncscala/api.mustache
+++ b/src/main/resources/asyncscala/api.mustache
@@ -3,9 +3,8 @@ package {{package}}
 {{#imports}}import {{import}}
 {{/imports}}
 import com.wordnik.swagger.client._
-import akka.dispatch.{ Future, Await }
-import akka.util.duration._
-import akka.util.Duration
+import scala.concurrent.{ Future, Await }
+import scala.concurrent.duration._
 import collection.mutable
 
 {{#operations}}
