--- a/src/main/resources/asyncscala/sbt.mustache
+++ b/src/main/resources/asyncscala/sbt.mustache
@@ -2,6 +2,8 @@ organization := "com.wordnik.samples"
 
 name := "{{projectName}}-client"
 
+scalaVersion := "2.10.0"
+
 libraryDependencies += "com.wordnik.swagger" %% "swagger-async-httpclient" % "0.1.4"
 
 libraryDependencies += "joda-time" % "joda-time" % "2.2"
