--- a/src/main/resources/Java/pom.mustache
+++ b/src/main/resources/Java/pom.mustache
@@ -5,29 +5,15 @@
   <artifactId>swagger-client</artifactId>
   <packaging>jar</packaging>
   <name>swagger-client</name>
-  <version>1.0</version>
+  <version>1.0.0</version>
   <scm>
     <connection>scm:git:git@github.com:wordnik/swagger-mustache.git</connection>
-    <developerConnection>scm:git:git@github.com:wordnik/swagger-mustache.git</developerConnection>
-    <url>https://github.com/wordnik/swagger-mustache</url>
+    <developerConnection>scm:git:git@github.com:wordnik/swagger-codegen.git</developerConnection>
+    <url>https://github.com/wordnik/swagger-codegen</url>
   </scm>
   <prerequisites>
     <maven>2.2.0</maven>
   </prerequisites>
-
-  <pluginRepositories>
-    <pluginRepository>
-      <id>scala-tools.org</id>
-      <name>Scala-Tools Maven2 Repository</name>
-      <url>http://scala-tools.org/repo-releases</url>
-    </pluginRepository>
-    <pluginRepository>
-      <id>maven-mongodb-plugin-repo</id>
-      <name>maven mongodb plugin repository</name>
-      <url>http://maven-mongodb-plugin.googlecode.com/svn/maven/repo</url>
-      <layout>default</layout>
-    </pluginRepository>
-  </pluginRepositories>
 
   <build>
     <plugins>
@@ -119,31 +105,40 @@
         </configuration>
       </plugin>
       <plugin>
-        <groupId>org.scala-tools</groupId>
-        <artifactId>maven-scala-plugin</artifactId>
-        <version>2.15.2</version>
+        <groupId>net.alchim31.maven</groupId>
+        <artifactId>scala-maven-plugin</artifactId>
         <executions>
           <execution>
-            <id>scala-compile-first</id>
-            <phase>process-resources</phase>
             <goals>
-              <goal>add-source</goal>
               <goal>compile</goal>
-            </goals>
-          </execution>
-          <execution>
-            <id>scala-test-compile</id>
-            <phase>process-test-resources</phase>
-            <goals>
               <goal>testCompile</goal>
             </goals>
           </execution>
         </executions>
         <configuration>
+          <configuration>
+            <recompileMode>incremental</recompileMode>
+          </configuration>
           <jvmArgs>
-            <jvmArg>-Xms128m</jvmArg>
-            <jvmArg>-Xmx1500m</jvmArg>
+            <jvmArg>-Xmx384m</jvmArg>
           </jvmArgs>
+          <args>
+            <arg>-target:jvm-1.5</arg>
+            <arg>-deprecation</arg>
+          </args>
+          <launchers>
+            <launcher>
+              <id>run-scalatest</id>
+              <mainClass>org.scalatest.tools.Runner</mainClass>
+              <args>
+                <arg>-p</arg>
+                <arg>${project.build.testOutputDirectory}</arg>
+              </args>
+              <jvmArgs>
+                <jvmArg>-Xmx512m</jvmArg>
+              </jvmArgs>
+            </launcher>
+          </launchers>
         </configuration>
       </plugin>
     </plugins>
@@ -151,11 +146,9 @@
   <reporting>
     <plugins>
       <plugin>
-        <groupId>org.scala-tools</groupId>
-        <artifactId>maven-scala-plugin</artifactId>
-        <configuration>
-          <scalaVersion>${scala-version}</scalaVersion>
-        </configuration>
+        <groupId>net.alchim31.maven</groupId>
+        <artifactId>scala-maven-plugin</artifactId>
+        <version>${scala-maven-plugin-version}</version>
       </plugin>
     </plugins>
   </reporting>
@@ -167,15 +160,10 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
-      <groupId>org.scala-lang</groupId>
-      <artifactId>scala-library</artifactId>
-      <version>${scala-version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.scalatest</groupId>
-      <artifactId>scalatest_2.9.1</artifactId>
-      <version>${scala-test-version}</version>
-      <scope>test</scope>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-core</artifactId>
+      <version>${jackson-version}</version>
+      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
@@ -185,15 +173,23 @@
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-core</artifactId>
-      <version>${jackson-version}</version>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
       <version>${jackson-version}</version>
       <scope>compile</scope>
+    </dependency>
+
+    <!-- test dependencies -->
+    <dependency>
+      <groupId>org.scala-lang</groupId>
+      <artifactId>scala-library</artifactId>
+      <version>${scala-version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.scalatest</groupId>
+      <artifactId>scalatest_2.9.1</artifactId>
+      <version>${scala-test-version}</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
@@ -202,33 +198,14 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-  <repositories>
-    <repository>
-      <id>scala-tools.org</id>
-      <name>Scala-Tools Maven2 Repository</name>
-      <url>http://scala-tools.org/repo-releases</url>
-    </repository>
-    <repository>
-      <id>wordnik-ci-aws</id>
-      <url>https://ci.aws.wordnik.com/artifactory/libs-snapshots/</url>
-    </repository>
-    <repository>
-      <id>wordnik-ci-aws-maven</id>
-      <url>https://ci.aws.wordnik.com/artifactory/m2-snapshots/</url>
-    </repository>
-    <repository>
-      <id>wordnik-ci-aws-remote</id>
-      <url>https://ci.aws.wordnik.com/artifactory/remote-repos/</url>
-    </repository>
-  </repositories>
 
   <properties>
     <jersey-version>1.7</jersey-version>
+    <jackson-version>2.1.4</jackson-version>
     <scala-version>2.9.1-1</scala-version>
     <junit-version>4.8.1</junit-version>
-    <jackson-version>2.0.4</jackson-version>
-    <maven-plugin.version>1.0.0</maven-plugin.version>
+    <maven-plugin-version>1.0.0</maven-plugin-version>
+    <junit-version>4.8.1</junit-version>
     <scala-test-version>1.6.1</scala-test-version>
   </properties>
 </project>
-
