--- a/src/main/resources/swagger-static/operation.mustache
+++ b/src/main/resources/swagger-static/operation.mustache
@@ -1,82 +1,30 @@
-<!DOCTYPE html>
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+<div class="main-content">
+  <h2><a name="{{className}}"></a>{{className}}</h2>
+  <p>This is the {{className}} API</p>
 
-  <link rel="stylesheet" type="text/css" href="../assets/css/bootstrap.css" media="screen">
-  <link rel="stylesheet" type="text/css" href="../assets/css/bootstrap-responsive.css" media="screen">
-  <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
-
-  <title>REST API v1.1 Resources | Twitter Developers</title>
-</head>
-<body>
-  <div class="header">
-		<div class="top-bar">
-      <h1 id="logo"><a class="logo" href="/"><span>Swagger</span><span class="light">API Docs</span></a></h1>
+  {{#operations}}
+  {{#operation}}
+  <h2><a name="{{nickname}}"></a>{{nickname}}</h2>
+  <hr>
+  <p>{{description}}</p>
+  {{#notes}}<p>{{notes}}</p>{{/notes}}
+  <h3 class="section">URL</h3>
+  <code>{{basePath}}{{path}}</code>
+  <h3 class="section">HTTP Method</h3>
+  <code>{{httpMethod}}</code>
+  <h3 class="section">Response Type</h3>
+  <div class="model" id="{{returnBaseType}}"><a href="#">{{returnType}}</a></div>
+  <h3 class="section">Parameters</h3>
+  <ul>
+  	{{#allParams}}
+	  <div class="parameter">
+	    <div class="param">{{paramName}}&nbsp;:&nbsp;{{#complexType}}&nbsp;<div class="model" id="{{complexType}}"><a href="#">{{dataType}}</a>{{/complexType}}{{#simpleType}}{{dataType}}{{/simpleType}}&nbsp;({{type}})</div>
+	      <span>{{#optional}}optional{{/optional}}</span>
+	    </div>
+	    <p class="param-description">{{description}}</p>
 	  </div>
-	</div>
-
-  <div class="main_content">
-	  <h1>{{className}}</h1>
-	  {{#operations}}
-	  {{#operation}}
-	  <a name="{{nickname}}"></a>
-	  <h2>{{nickname}}</h2>
-	  <h3>{{httpMethod}}: {{path}}</h3>
-	  <table>
-	    <tr>
-	      <th class="column_header_name">parameter</th>
-	      <th class="column_header_param_type">param type</th>
-	      <th class="column_header_data_type">data type</th>
-	      <th class="column_header_return_type">response type</th>
-	      <th class="column_header_notes">Description</th>
-	    </tr>
-	    <!-- body params -->
-	    {{#bodyParams}}
-	    <tr>
-	      <td>{{paramName}}<br/>{{#required}}required{{/required}}{{^required}}optional{{/required}}</td>
-	      <td>body</td>
-	      <td>{{swaggerDataType}}{{#allowMultiple}}*{{/allowMultiple}}</td>
-	      <td>{{#returnType}}{{returnType}}{{/returnType}}{{^returnType}}-{{/returnType}}</td>
-	      <td>{{description}}{{#notes}}<br/><div id="{{className}}_{{nickname}}" class="operation expandable">{{notes}}</div>{{/notes}}</td>
-	    </tr>
-	    {{/bodyParams}}
-
-	    <!-- path params -->
-	    {{#pathParams}}
-	    <tr>
-	      <td>{{paramName}}<br/>{{#required}}required{{/required}}{{^required}}optional{{/required}}</td>
-	      <td>path</td>
-	      <td>{{swaggerDataType}}{{#allowMultiple}}*{{/allowMultiple}}</td>
-	      <td>{{#returnType}}{{returnType}}{{/returnType}}{{^returnType}}-{{/returnType}}</td>
-	      <td>{{description}}{{#notes}}<br/><div id="{{className}}_{{nickname}}" class="operation expandable">{{notes}}</div>{{/notes}}</td>
-	    </tr>
-	    {{/pathParams}}
-
-	    <!-- query params -->
-	    {{#queryParams}}
-	    <tr>
-	      <td>{{paramName}}<br/>{{#required}}required{{/required}}{{^required}}optional{{/required}}</td>
-	      <td>query</td>
-	      <td>{{swaggerDataType}}{{#allowMultiple}}*{{/allowMultiple}}</td>
-	      <td>{{#returnType}}{{returnType}}{{/returnType}}{{^returnType}}-{{/returnType}}</td>
-	      <td>{{description}}{{#notes}}<br/><div id="{{className}}_{{nickname}}" class="operation expandable">{{notes}}</div>{{/notes}}</td>
-	    </tr>
-	    {{/queryParams}}
-
-	    <!-- header params -->
-	    {{#headerParams}}
-	    <tr>
-	      <td>{{paramName}}<br/>{{#required}}required{{/required}}{{^required}}optional{{/required}}</td>
-	      <td>header</td>
-	      <td>{{swaggerDataType}}{{#allowMultiple}}*{{/allowMultiple}}</td>
-	      <td>{{#returnType}}{{returnType}}{{/returnType}}{{^returnType}}-{{/returnType}}</td>
-	      <td>{{description}}{{#notes}}<br/><div id="{{className}}_{{nickname}}" class="operation expandable">{{notes}}</div>{{/notes}}</td>
-	    </tr>
-	    {{/headerParams}}
-	  </table>
-	  {{/operation}}
-	  {{/operations}}
-	</div>
-</body>
-</html>
+    {{/allParams}}
+  </ul>
+  {{/operation}}
+  {{/operations}}
+</div>
