use async http client with service locator

--- a/src/main/resources/asyncscala/client.mustache
+++ b/src/main/resources/asyncscala/client.mustache
@@ -7,7 +7,8 @@ import apis._
 import java.io.Closeable
 
 class {{clientName}}(config: SwaggerConfig) extends Closeable {
-  val baseUrl = config.baseUrl
+  val locator = config.locator
+  val name = config.name
   val dataFormat = config.dataFormat
 
   private[this] val client = transportClient
