--- a/src/main/resources/asyncscala/sbt.mustache
+++ b/src/main/resources/asyncscala/sbt.mustache
@@ -2,7 +2,7 @@ organization := "{{package}}"
 
 name := "{{projectName}}-client"
 
-libraryDependencies += "com.wordnik.swagger" %% "swagger-async-httpclient" % "0.2.1"
+libraryDependencies += "com.wordnik.swagger" %% "swagger-async-httpclient" % "0.3.0-WN4"
 
 libraryDependencies += "joda-time" % "joda-time" % "2.2"
 
