change to return transpor client in async scala client

--- a/src/main/resources/asyncscala/client.mustache
+++ b/src/main/resources/asyncscala/client.mustache
@@ -12,7 +12,7 @@ class {{clientName}}(config: SwaggerConfig) extends Closeable {
 
   private[this] val client = transportClient
 
-  protected def transportClient = new RestClient(config)
+  protected def transportClient: TransportClient = new RestClient(config)
 
   {{#apis}}
   val {{name}} = new {{className}}(client, config)
