--- a/src/main/resources/php-modern/APIClient.mustache
+++ b/src/main/resources/php-modern/APIClient.mustache
@@ -211,6 +211,7 @@ class APIClient {
 			settype($object, $class);
 			return $object;
 		} else {
+			$class = '\{{modelPackage}}\\' . $class;
 			$instance = new $class(); // this instantiates class named $class
 			$classVars = get_class_vars($class);
 		}
