Use timeout property for timeout exception message

--- a/src/main/resources/php-modern/APIClient.mustache
+++ b/src/main/resources/php-modern/APIClient.mustache
@@ -121,7 +121,7 @@ class APIClient {
 
 		// Handle the response
 		if ($response_info['http_code'] == 0) {
-			throw new Exception("TIMEOUT: api call to {$url} took more than 5s to return" );
+			throw new Exception("TIMEOUT: api call to {$url} took more than {$this->timeout}s to return" );
 		} else if ($response_info['http_code'] == 200) {
 			$data = json_decode($response);
 		} else if ($response_info['http_code'] == 401) {
