--- a/src/main/resources/Java/model.mustache
+++ b/src/main/resources/Java/model.mustache
@@ -12,7 +12,7 @@ public class {{classname}} {
   private {{{datatype}}} {{name}} = {{{defaultValue}}};
   {{#allowableValues}}{{#min}} // range from {{min}} to {{max}}
   {{/min}}
-  {{^min}}public enum {{name}}Enum { {{#values}} {{.}}, {{/values}} }; 
+  //{{^min}}public enum {{name}}Enum { {{#values}} {{.}}, {{/values}} }; 
   {{/min}}
   {{/allowableValues}}
   
