Add joda-time support to BasicJavaGenerator
* Add joda-time as a dependency in pom.xml
* Add import mappings for commonly used joda-time classes

--- a/src/main/resources/Java/pom.mustache
+++ b/src/main/resources/Java/pom.mustache
@@ -178,6 +178,12 @@
       <version>${jackson-version}</version>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>joda-time</groupId>
+      <artifactId>joda-time</artifactId>
+      <version>${jodatime-version}</version>
+      <scope>compile</scope>
+    </dependency>
 
     <!-- test dependencies -->
     <dependency>
@@ -203,6 +209,7 @@
   <properties>
     <jersey-version>1.7</jersey-version>
     <jackson-version>2.1.4</jackson-version>
+    <jodatime-version>2.3</jodatime-version>
     <scala-version>2.9.1-1</scala-version>
     <junit-version>4.8.1</junit-version>
     <maven-plugin-version>1.0.0</maven-plugin-version>
