Add the API version to the Mustache model when generating supporting files.
This makes it easy to generate a client with version numbering in sync
with the server's advertised API version.

--- a/src/main/resources/Java/pom.mustache
+++ b/src/main/resources/Java/pom.mustache
@@ -5,7 +5,7 @@
   <artifactId>api-client</artifactId>
   <packaging>jar</packaging>
   <name>api-client</name>
-  <version>1.0.0</version>
+  <version>{{apiVersion}}</version>
   <scm>
     <connection>scm:git:git@github.com:wordnik/swagger-mustache.git</connection>
     <developerConnection>scm:git:git@github.com:wordnik/swagger-codegen.git</developerConnection>
